hot
Took 27 minutes